--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
   <div class="wrapper">
+    <h1>Typography</h1>
     <div class="content">
       <h1>Heading 1</h1>
       <h2>Heading 2</h2>
@@ -25,7 +26,7 @@
     </div>
 
     <br/>
-    <h2>Buttons</h2>
+    <h1>Buttons</h1>
     <div class="content">
       <button class="btn--primary">Primary</button> 
       <br/>
@@ -45,6 +46,54 @@
       <button class="btn--danger-outline">Danger Outline</button> 
       <br/>
       <br/>
+    </div>
+
+    <h1>Input</h1>
+    <div class="content">
+      <label for="text">Text</label>
+      <input id="text" type="text"/>
+      <label for="date">Date</label>
+      <input id="date" type="date"/>
+      <label for="email">Email</label>
+      <input id="email" type="email" />
+      <label for="file">File</label>
+      <input id="file" type="file" />
+      <label for="month">Month</label>
+      <input id="month" type="month" />
+      <label for="number">Number</label>
+      <input id="number" type="number" />
+      <label for="password">Password</label>
+      <input id="password" type="password" />
+      <label for="range">Range</label>
+      <input id="range" type="range" />
+      <label for="search">Search</label>
+      <input id="search" type="search" />
+      <label for="tel">Tel</label>
+      <input id="tel" type="tel" />
+      <label for="url">URL</label>
+      <input id="url" type="url" />
+
+      <h3>Radio</h3>
+      <br/>
+      <input id="option1" class="radio" type="radio" name="radio" value="Option 1" />
+      <label for="option1">Option 1</label>
+      <br/>
+      <input id="option2" class="radio" type="radio" name="radio" value="Option 2" />
+      <label for="option1">Option 2</label>
+      <br/>
+      <input id="option3" class="radio"type="radio" name="radio" value="Option 3" />
+      <label for="option1">Option 3</label>
+      <br/>
+      <input id="option4" class="radio" type="radio" name="radio" value="Option 4" />
+      <label for="option1">Option 4</label>
+      <br/>
+
+      <h3>Select</h3>
+      <select>
+        <option>Select an Option</option>
+        <option>Cat</option>
+        <option>Dog</option>
+      </select>
     </div>
   </div>
 </body>
