adjust skills headings for better readability

--- a/cv.html
+++ b/cv.html
@@ -30,6 +30,7 @@
       </nav>
       <section class="skills_section">
         <h2 class="skills__heading">Skills</h2>
+        <h3>Proficient with:</h3>
         <ul class="skills__list">
           <li class="skills__item">TypeScript</li>
           <li class="skills__item">React</li>
@@ -39,7 +40,7 @@
           <li class="skills__item">React Testing Library</li>
           <li class="skills__item">Git</li>
         </ul>
-        <h2 class="skills__heading">Exposure</h2>
+        <h3>Familiar with:</h3>
         <ul class="skills__list">
           <li class="skills__item">Node</li>
           <li class="skills__item">Express</li>
