add work experience dot points

--- a/cv.html
+++ b/cv.html
@@ -53,12 +53,19 @@
         <div class="employment">
           <h3>Belle Property Strathfield - Property Manager</h3>
           <h6>Jan 2022 - Current</h6>
-          <p></p>
         </div>
         <div class="employment">
           <h3>Rodi Realty - Property Officer</h3>
           <h6>Oct 2018 - Dec 2021</h6>
-          <p></p>
+          <p>
+            <ul>
+              <li>Communicated synchronously and/or asynchronously with clients face-to-face, over email messaging or over the phone.</li>
+              <li>Defined the needs and requirements of potential tenants through communication & empathy and used these requirements to make recommendations for suitable properties.</li>
+              <li>Reviewed and processed rental applications: assessing the fitness of a potential tenant to pay rent and to look after properties.</li>
+              <li>Handle and resolve conflict situations between landlords and tenants such as working payment plans with tenants to reduce rental arrears.</li>
+              <li>Document the condition of properties through conducting ingoing, routine and outgoing inspections.</li>
+            </ul>
+          </p>
         </div>
       </section>
       <section>
