adjust wording for domain scraper projects

--- a/cv.html
+++ b/cv.html
@@ -86,7 +86,7 @@
           <br/>
           <ul>
             <li>Queries the Domain.com.au Developer API using Node for rental listings data, persists the data to MongoDB (via Mongoose) and generates bar charts using R and ggplot2.</li>
-            <li>Extracts rental prices from displayPrice field which contained text such as <em>"Leased by Century 1 - $500 Per Week"</em> or <em>"$500PW - $530PW"</em>.</li>
+            <li>Extracts rental prices from displayPrice field with contaminated text such as <em>"Leased by Century 1 - $500 Per Week"</em> or <em>"$500PW - $530PW"</em>.</li>
             <li>
               <a target="_blank" href="https://raw.githubusercontent.com/davidtaing/domain-scraper/main/plots/listings/2140_ApartmentUnitFlat_2BR_2022-02-16.png">
                 Example Plot: 2 Bedroom Apartments & Units in the 2140 Postcode (Homebush & Homebush West)
