add missing backslash

--- a/cv.html
+++ b/cv.html
@@ -21,7 +21,7 @@
             <a target="_blank" href="https://teeang.net/">https://teeang.net/</a>
           </li>
           <li class="nav__link">
-            <a target="_blank" href="https://github.com/davidtaing">https://github.com/davidtaing</a>
+            <a target="_blank" href="https://github.com/davidtaing/">https://github.com/davidtaing/</a>
           </li>
           <li class="nav__link">
             <a target="_blank" href="https://www.linkedin.com/in/teeang/">https://www.linkedin.com/in/teeang/</a>
