--- a/cv.html
+++ b/cv.html
@@ -59,10 +59,10 @@
           <h6>Oct 2018 - Dec 2021</h6>
           <p>
             <ul>
-              <li>Communicated synchronously and/or asynchronously with clients face-to-face, over email messaging or over the phone.</li>
+              <li>Communicated with clients synchronously and/or asynchronously via face-to-face, email messaging or over the phone.</li>
               <li>Defined the needs and requirements of potential tenants through communication & empathy and used these requirements to make recommendations for suitable properties.</li>
-              <li>Handle and resolve conflict situations between landlords and tenants such as working payment plans with tenants to reduce rental arrears.</li>
-              <li>Document the condition of properties through conducting ingoing, routine and outgoing inspections.</li>
+              <li>Handled and resolved conflict situations between landlords and tenants such as working payment plans with tenants to reduce rental arrears.</li>
+              <li>Document the condition of properties by conducting ingoing, routine and outgoing inspections.</li>
               <li>Reviewed and processed rental applications: assessing the fitness of a potential tenant to pay rent and to look after properties.</li>
             </ul>
           </p>
@@ -85,7 +85,7 @@
           <a class="project__link" target="_blank" href="https://github.com/davidtaing/domain-scraper">Github Repository</a>
           <br/>
           <ul>
-            <li>Queries the Domain.com.au Developer API using Node for rental listings data, persists the data to MongoDB (via Mongoose) and generates bar charts using R and ggplot2.</li>
+            <li>Queries the Domain.com.au Developer API using Node for rental listings data, persists data to MongoDB (via Mongoose) and generates bar charts using R and ggplot2.</li>
             <li>Extracts rental prices from displayPrice field with contaminated text such as <em>"Leased by Century 1 - $500 Per Week"</em> or <em>"$500PW - $530PW"</em>.</li>
             <li>
               <a target="_blank" href="https://raw.githubusercontent.com/davidtaing/domain-scraper/main/plots/listings/2140_ApartmentUnitFlat_2BR_2022-02-16.png">
@@ -102,7 +102,7 @@
           <br/>
           <ul>
             <li>Portfolio website built with TypeScript, Next.js, React & Styled Components.</li>
-            <li>Integrated Blogposts from Headless GraphQL Wordpress.</li>
+            <li>Integrated blog posts from Headless GraphQL Wordpress.</li>
             <li>Utilized the SendGrid API to send messages to my personal email via the "Contact Me" form.</li>
           </ul>
         </div>
