add class names to employment elements

--- a/cv.html
+++ b/cv.html
@@ -48,13 +48,13 @@
           <li class="skills__item">OpenAPI</li>
         </ul>
       </section>
-      <section>
-        <h2>Work Experience</h2>
-        <div class="employment">
+      <section class="employment__section">
+        <h2 class="employment__heading">Work Experience</h2>
+        <div class="employment__item">
           <h3>Belle Property Strathfield - Property Manager</h3>
           <h6>Jan 2022 - Current</h6>
         </div>
-        <div class="employment">
+        <div class="employment__item">
           <h3>Rodi Realty - Property Officer</h3>
           <h6>Oct 2018 - Dec 2021</h6>
           <p>
