add education to cv

--- a/cv.html
+++ b/cv.html
@@ -48,9 +48,22 @@
           <li class="skills__item">OpenAPI</li>
         </ul>
       </section>
+      <section>
+        <h2>Education</h2>
+        <div class="employment">
+          <h3>Diploma of Software Development</h3>
+          <h5>TAFE NSW</h5>
+          <h6>Jul 2015 - Dec 2015</h6>
+        </div>
+        <div class="employment">
+          <h3>Certificate IV in Digital and Interactive Games</h3>
+          <h5>TAFE NSW</h5>
+          <h6>Jul 2014 - Jun 2015</h6>
+        </div>
+      </section>
       <section class="employment__section">
-        <h2 class="employment__heading">Work Experience</h2>
-        <div class="employment__item">
+        <h2>Work Experience</h2>
+        <div class="employment__heading">
           <h3>Belle Property Strathfield - Property Manager</h3>
           <h6>Jan 2022 - Current</h6>
         </div>
