CV: add dot point for Rental Applications project

--- a/cv.html
+++ b/cv.html
@@ -91,6 +91,7 @@
           <br/>
           <ul>
             <li>Next.js, React & TypeScript application where users can apply for rental properties.</li>
+            <li>Reimplemented forms with React Hook Form due to poor performance with Formik. Upon form input, Formik would unnessarily re-render the entire form.</li>
           </ul>
         </div>
         <div class="project">
